# action-recorder

./: CMakeLists.txt  README.md  globals.h  hardcoded.h  main.cpp  script.cpp  script.h  utils.cpp  utils.h
